2025-12-31T00:47:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20609240278 # 855
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-31
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 491 1522 / 492 1523
* notice: next accum: outdated-unq outdated-all / unq all: 491 1522 / 492 1523
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2025-12-28T00:53:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20546625307 # 852
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-28
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 490 1521 / 492 1523
* notice: next accum: outdated-unq outdated-all / unq all: 491 1522 / 492 1523
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-13] / []

2025-12-24T00:45:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20475032960 # 848
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-24
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 489 1519 / 492 1523
* notice: next accum: outdated-unq outdated-all / unq all: 490 1521 / 492 1523
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-09] / []

2025-12-19T00:46:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20355992076 # 843