@@ -1,3 +1,12 @@
+2026-01-01T00:53:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20630064683 # 856
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-01
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 491 1522 / 492 1523
+* notice: next accum: outdated-unq outdated-all / unq all: 491 1522 / 492 1523
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-12-16] / []
+
 2025-12-31T00:47:52Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20609240278 # 855
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-31
